--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 ######################## default configuration ####################
-baseURL = "http://examplesite.org/"
+baseURL = "http://car.kikia.co/"
 title = "Bigspring Hugo"
 theme = "bigspring"
 languageName = "En"
