--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -1,8 +1,8 @@
 ####################### Banner #########################
 banner:
-  title : "Let us solve your critical website <br> development challenges"
+  title : "Let us solve your Car Problem <br> Car Rental"
   image : "images/banner-art.svg"
-  content : "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam nihil enim maxime corporis cumque <br> totam aliquid nam sint inventore optio modi neque laborum officiis necessitatibus"
+  content : "Looking for car with best price in market?"
   button:
     enable : true
     label : "Contact With Us"
